ran out of time so stopping all dev work, although its not responsive

--- a/src/assets/scss/components/base.scss
+++ b/src/assets/scss/components/base.scss
@@ -1,4 +1,14 @@
 // base
+html {
+  font-size: 12px;
+}
+
+@media (min-width: 640px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 .vh70 {
   min-height: 70vh;
 }
